[gd_scene load_steps=11 format=3 uid="uid://dkhhuhw8dy2p6"]

[ext_resource type="Script" path="res://scripts/ui/editor_ui.gd" id="1_8skki"]
[ext_resource type="Theme" uid="uid://cxh7ldhx5mqkh" path="res://themes/light/thm_light.tres" id="1_wmxdq"]
[ext_resource type="Texture2D" uid="uid://bn1rxs674bej6" path="res://sprites/outliner/spr_generic.png" id="3_3h17x"]
[ext_resource type="Texture2D" uid="uid://cwxpjduk410eu" path="res://sprites/outliner/spr_object.png" id="4_wybqb"]
[ext_resource type="Texture2D" uid="uid://d1rn3tvmk4ccj" path="res://sprites/outliner/spr_terrain.png" id="5_ugi7j"]
[ext_resource type="Script" path="res://scripts/ui/history_log_ui.gd" id="6_7x81c"]
[ext_resource type="Script" path="res://scripts/ui/outliner_ui.gd" id="6_igi63"]
[ext_resource type="Script" path="res://scripts/ui/selection_properties_ui.gd" id="6_yhw7h"]
[ext_resource type="Script" path="res://scripts/ui/fps_counter_ui.gd" id="7_3y2ym"]
[ext_resource type="PackedScene" uid="uid://n1w1qv1nk8nq" path="res://scenes/ui/property_elements/property_element_text.tscn" id="7_mp4xd"]

[node name="ui_main" type="Control" node_paths=PackedStringArray("_sub_viewport", "_outliner", "_properties")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wmxdq")
script = ExtResource("1_8skki")
_sub_viewport = NodePath("vbox/bottom/hsplit/3d_viewport/viewport_container/sub_viewport")
_outliner = NodePath("vbox/bottom/hsplit/editing_windows/vsplit/outliner")
_properties = NodePath("vbox/bottom/hsplit/editing_windows/vsplit/properties")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menu_bar" type="Control" parent="vbox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="bg" type="Panel" parent="vbox/menu_bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="vbox/menu_bar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -11.5
offset_right = 12.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="PopupMenu" parent="vbox/menu_bar/MenuBar"]
size = Vector2i(131, 147)
item_count = 6
item_0/text = "New Level"
item_0/id = 0
item_1/text = "Open Level"
item_1/id = 1
item_2/text = "Save Level"
item_2/id = 2
item_3/text = "Save Level As"
item_3/id = 3
item_4/text = ""
item_4/id = 0
item_4/separator = true
item_5/text = "Exit Editor"
item_5/id = 4

[node name="Edit" type="PopupMenu" parent="vbox/menu_bar/MenuBar"]
item_count = 7
item_0/text = "New Object"
item_0/id = 0
item_1/text = "Delete Object"
item_1/id = 1
item_2/text = ""
item_2/id = 0
item_2/separator = true
item_3/text = "Undo"
item_3/id = 2
item_4/text = "Redo"
item_4/id = 3
item_5/text = ""
item_5/id = 0
item_5/separator = true
item_6/text = "Ping"
item_6/id = 4

[node name="View" type="PopupMenu" parent="vbox/menu_bar/MenuBar"]
item_count = 1
item_0/text = "About Editor"
item_0/id = 0

[node name="bottom" type="Control" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="hsplit" type="HSplitContainer" parent="vbox/bottom"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="3d_viewport" type="Control" parent="vbox/bottom/hsplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="viewport_container" type="SubViewportContainer" parent="vbox/bottom/hsplit/3d_viewport"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="sub_viewport" type="SubViewport" parent="vbox/bottom/hsplit/3d_viewport/viewport_container"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="editing_windows" type="Control" parent="vbox/bottom/hsplit"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="vsplit" type="VSplitContainer" parent="vbox/bottom/hsplit/editing_windows"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="outliner" type="Control" parent="vbox/bottom/hsplit/editing_windows/vsplit" node_paths=PackedStringArray("_tree")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_igi63")
_tree = NodePath("vbox/tree")
_icon_default = ExtResource("3_3h17x")
_icon_object = ExtResource("4_wybqb")
_icon_terrain = ExtResource("5_ugi7j")

[node name="bg" type="Panel" parent="vbox/bottom/hsplit/editing_windows/vsplit/outliner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ForegroundPanel"

[node name="vbox" type="VBoxContainer" parent="vbox/bottom/hsplit/editing_windows/vsplit/outliner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="header" type="Panel" parent="vbox/bottom/hsplit/editing_windows/vsplit/outliner/vbox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_type_variation = &"PanelHeader"

[node name="label" type="Label" parent="vbox/bottom/hsplit/editing_windows/vsplit/outliner/vbox/header"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Outliner"

[node name="tree" type="Tree" parent="vbox/bottom/hsplit/editing_windows/vsplit/outliner/vbox"]
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
select_mode = 2
scroll_horizontal_enabled = false

[node name="properties" type="Control" parent="vbox/bottom/hsplit/editing_windows/vsplit" node_paths=PackedStringArray("_elements_root")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_yhw7h")
_elements_root = NodePath("vbox/ScrollContainer/vbox")
_element_text_prefab = ExtResource("7_mp4xd")

[node name="bg" type="Panel" parent="vbox/bottom/hsplit/editing_windows/vsplit/properties"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ForegroundPanel"

[node name="vbox" type="VBoxContainer" parent="vbox/bottom/hsplit/editing_windows/vsplit/properties"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="header" type="Panel" parent="vbox/bottom/hsplit/editing_windows/vsplit/properties/vbox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_type_variation = &"PanelHeader"

[node name="label" type="Label" parent="vbox/bottom/hsplit/editing_windows/vsplit/properties/vbox/header"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Properties"

[node name="ScrollContainer" type="ScrollContainer" parent="vbox/bottom/hsplit/editing_windows/vsplit/properties/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="vbox/bottom/hsplit/editing_windows/vsplit/properties/vbox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="history_log" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"LabelOutline"
horizontal_alignment = 2
vertical_alignment = 2
script = ExtResource("6_7x81c")

[node name="fps_counter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme_type_variation = &"LabelOutline"
vertical_alignment = 2
script = ExtResource("7_3y2ym")

[connection signal="id_pressed" from="vbox/menu_bar/MenuBar/Level" to="." method="_menu_btn_level"]
[connection signal="id_pressed" from="vbox/menu_bar/MenuBar/Edit" to="." method="_menu_btn_edit"]
[connection signal="id_pressed" from="vbox/menu_bar/MenuBar/View" to="." method="_menu_btn_view"]
[connection signal="node_deselected" from="vbox/bottom/hsplit/editing_windows/vsplit/outliner" to="." method="_outliner_item_deselected"]
[connection signal="node_selected" from="vbox/bottom/hsplit/editing_windows/vsplit/outliner" to="." method="_outliner_item_selected"]
[connection signal="multi_selected" from="vbox/bottom/hsplit/editing_windows/vsplit/outliner/vbox/tree" to="vbox/bottom/hsplit/editing_windows/vsplit/outliner" method="_set_item_selected"]
[connection signal="property_element_value_changed" from="vbox/bottom/hsplit/editing_windows/vsplit/properties" to="." method="_property_modified"]
